--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 						</header>
 						<div id="news">
 							<ul>
+								<li>[March 2023] SpeechPrompt v2 paper is available. [<a
+										href="https://arxiv.org/abs/2303.00733">link</a>] </li>
 								<li>[Oct. 2022] Website of SeechPrompt project is borned </li>
-								<li>[Oct. 2022] SpeechPrompt v2 is submitted to <b>ICASSP 2023</b> </li>
 								<li>[Oct. 2022] "SpeechPrompt" is an research topic in the <b>JSALT workshop</b> [<a
 										href="https://jsalt-2022-ssl.github.io/">website</a>]</li>
 								<li>
@@ -68,7 +69,8 @@
 										href="https://github.com/ga642381/SpeechPrompt">code</a>]
 								</li>
 								<li>
-									[March 2022] SpeechPrompt v1 is available on arXiv
+									[March 2022] SpeechPrompt v1 is available on arXiv [<a
+										href="https://arxiv.org/abs/2203.16773">link</a>]
 								</li>
 							</ul>
 						</div>
