added SpeechPrompt v2 citation

--- a/speech-prompt-v2.html
+++ b/speech-prompt-v2.html
@@ -1083,6 +1083,22 @@
 									</section>
 								</div>
 							</div>
+
+							<section>
+								<header>
+									<h2>Citation</h2>
+								</header>
+								<div id="bibtex-section" class="section">
+									<pre class="verbatim">
+@article{chang2023speechprompt,
+title={SpeechPrompt v2: Prompt Tuning for Speech Classification Tasks},
+author={Chang, Kai-Wei and Wang, Yu-Kai and Shen, Hua and Kang, Iu-thing and Tseng,
+Wei-Cheng and Li, Shang-Wen and Lee, Hung-yi},
+journal={arXiv preprint arXiv:2303.00733},
+year={2023}
+}</pre>
+								</div>
+							</section>
 					</article>
 				</div>
 			</section>
