--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 						</header>
 						<div id="news">
 							<ul>
+								<li>[May. 2023] SpeechPrompt v2 code released [<a
+										href="https://github.com/ga642381/SpeechPrompt-v2">link</a>]</li>
 								<li>[March 2023] SpeechPrompt v2 paper is available. [<a
 										href="https://arxiv.org/abs/2303.00733">link</a>] </li>
 								<li>[Oct. 2022] Website of SeechPrompt project is borned </li>
