--- a/speech-prompt-v1.html
+++ b/speech-prompt-v1.html
@@ -19,12 +19,12 @@
 		<!-- Header -->
 		<section id="header">
 			<!-- Logo -->
-			<h1><a href="overview.html">SpeechPrompt</a></h1>
+			<h1><a href="index.html">SpeechPrompt</a></h1>
 
 			<!-- Nav -->
 			<nav id="nav">
 				<ul>
-					<li><a href="overview.html">Overview</a></li>
+					<li><a href="index.html">Overview</a></li>
 					<li class="current">
 						<a href="speech-prompt-v1.html">SpeechPrompt v1</a>
 					</li>
