--- a/speech-prompt-v2.html
+++ b/speech-prompt-v2.html
@@ -19,12 +19,12 @@
 		<!-- Header -->
 		<section id="header">
 			<!-- Logo -->
-			<h1><a href="overview.html">SpeechPrompt</a></h1>
+			<h1><a href="index.html">SpeechPrompt</a></h1>
 
 			<!-- Nav -->
 			<nav id="nav">
 				<ul>
-					<li><a href="overview.html">Overview</a></li>
+					<li><a href="index.html">Overview</a></li>
 					<li><a href="speech-prompt-v1.html">SpeechPrompt v1</a></li>
 					<li class="current"><a href="speech-prompt-v2.html">SpeechPrompt v2</a></li>
 					<!-- <li><a href="no-sidebar.html">More</a></li> -->
@@ -43,7 +43,7 @@
 						<li>
 							<a href="https://arxiv.org/abs/2303.00733" class="button">Paper</a>
 						</li>
-						<li><a href="#" class="button">Code (coming soon)</a></li>
+						<li><a href="https://github.com/ga642381/SpeechPrompt-v2" class="button">Code</a></li>
 					</ul>
 				</header>
 			</section>
