--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<li class="current"><a href="index.html">Overview</a></li>
 					<li><a href="speech-prompt-v1.html">SpeechPrompt v1</a></li>
 					<li><a href="speech-prompt-v2.html">SpeechPrompt v2</a></li>
+					<li><a href="speechgen.html">SpeechGen</a></li>
 					<!-- <li><a href="no-sidebar.html">More</a></li> -->
 				</ul>
 			</nav>
@@ -42,6 +43,7 @@
 					<ul class="actions">
 						<li><a href="speech-prompt-v1.html" class="button">SpeechPrompt v1</a></li>
 						<li><a href="speech-prompt-v2.html" class="button">SpeechPrompt v2</a></li>
+						<li><a href="speechgen.html" class="button">SpeechGen</a></li>
 					</ul>
 				</header>
 			</section>
@@ -58,6 +60,8 @@
 						</header>
 						<div id="news">
 							<ul>
+								<li>[June 2023] SpeechGen paper is available [<a
+										href="https://arxiv.org/abs/2306.02207">link</a>] </li>
 								<li>[May. 2023] SpeechPrompt v2 code released [<a
 										href="https://github.com/ga642381/SpeechPrompt-v2">link</a>]</li>
 								<li>[March 2023] SpeechPrompt v2 paper is available. [<a
