--- a/speech-prompt-v1.html
+++ b/speech-prompt-v1.html
@@ -29,6 +29,7 @@
 						<a href="speech-prompt-v1.html">SpeechPrompt v1</a>
 					</li>
 					<li><a href="speech-prompt-v2.html">SpeechPrompt v2</a></li>
+					<li><a href="speechgen.html">SpeechGen</a></li>
 					<!-- <li><a href="no-sidebar.html">More</a></li> -->
 				</ul>
 			</nav>
