--- a/speech-prompt-v2.html
+++ b/speech-prompt-v2.html
@@ -27,6 +27,7 @@
 					<li><a href="index.html">Overview</a></li>
 					<li><a href="speech-prompt-v1.html">SpeechPrompt v1</a></li>
 					<li class="current"><a href="speech-prompt-v2.html">SpeechPrompt v2</a></li>
+					<li><a href="speechgen.html">SpeechGen</a></li>
 					<!-- <li><a href="no-sidebar.html">More</a></li> -->
 				</ul>
 			</nav>
