--- a/speechgen.html
+++ b/speechgen.html
@@ -25,11 +25,11 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Overview</a></li>
-					<li class="current">
+					<li>
 						<a href="speech-prompt-v1.html">SpeechPrompt v1</a>
 					</li>
 					<li><a href="speech-prompt-v2.html">SpeechPrompt v2</a></li>
-					<li><a href="speechgen.html">SpeechGen</a></li>
+					<li class="current"><a href="speechgen.html">SpeechGen</a></li>
 					<!-- <li><a href="no-sidebar.html">More</a></li> -->
 				</ul>
 			</nav>
