--- a/speechgen.html
+++ b/speechgen.html
@@ -112,8 +112,10 @@
 						<header>
 							<h2>Demo</h2>
 						</header>
-						<section>
-							<h3> Speech Translation </h3>
+						<br>
+						<br>
+						<section id="demo">
+							<h2> Speech Translation </h2>
 							<br>
 							<table>
 								<tr>
@@ -282,7 +284,156 @@
 							</table>
 							<br>
 							<br>
-							<h3> Speech Continuation </h3>
+							<h2> Speech Inpainting </h2>
+							<br>
+							<table>
+								<tr>
+									<th class="center"> Corrupted </th>
+									<th class="center"> SpeechGen </th>
+								</tr>
+								<!-- 1 -->
+								<tr>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/source/p244_022_16566_35207.wav">
+											type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">The actual primary _____________________ to be
+											the effect of superimposition of a number of bows.
+										</div>
+									</td>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/label/22_p244_022_16566_35207.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">The actual primary rainbow observed is said to be
+											the effect of superimposition of a number of bows.
+										</div>
+									</td>
+								</tr>
+								<!-- 2 -->
+								<tr>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/source/p244_107_14086_27682.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">This time it will _____________________ field a
+											little
+											bit.
+										</div>
+									</td>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/label/46_p244_107_14086_27682.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">This time it will have opened up the field a little
+											bit.
+										</div>
+									</td>
+								</tr>
+								<!-- 3 -->
+								<!-- <tr>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/source/p259_004_1164_18445.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">We also need a small plastic snake and a big toy
+											frog for the kids.
+										</div>
+									</td>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/label/156_p259_004_1164_18445.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">We also need a small plastic snake and a big toy
+											frog for the kids.
+										</div>
+									</td>
+								</tr> -->
+								<!-- 4-->
+								<!-- <tr>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/source/p259_007_23883_43083.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">The rainbow is a division of white light into many
+											beautiful colors.
+										</div>
+									</td>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/label/162_p259_007_23883_43083.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">The rainbow is a division of white light into many
+											beautiful colors.
+										</div>
+									</td>
+								</tr> -->
+								<!-- 5 -->
+								<!-- <tr>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/source/p259_022_29280_46788.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">The actual primary rainbow observed is said to be
+											the effect of superimposition of a number of bows.
+										</div>
+									</td>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/label/190_p259_022_29280_46788.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">The actual primary rainbow observed is said to be
+											the effect of superimposition of a number of bows.
+										</div>
+									</td>
+								</tr> -->
+								<!-- 6 -->
+								<tr>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/source/p280_004_37416_52765.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">We also need a small plastic snake ____________ toy
+											frog for the kids.
+										</div>
+									</td>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/label/434_p280_004_37416_52765.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">We also need a small plastic snake and a big toy
+											frog for the kids.
+										</div>
+									</td>
+								</tr>
+							</table>
+							<br>
+							<br>
+							<h2> Speech Continuation </h2>
 							<br>
 							<table>
 								<tr>
