added speechgen website

--- a/speechgen.html
+++ b/speechgen.html
@@ -48,7 +48,7 @@
 							<a href="https://arxiv.org/abs/2306.02207" class="button">Paper</a>
 						</li>
 						<li>
-							<!-- <a href="https://github.com/ga642381/SpeechPrompt" class="button">Code</a> -->
+							<a href="https://github.com/ga642381/SpeechGen" class="button">Code</a>
 						</li>
 						<li>
 							<!-- <a href="SpeechPrompt-v1-assets/SpeechPrompt-v1-Slides.pdf" class="button">Slides</a> -->
