fixed typo and update SpeechGen overall img (High res.)

--- a/speechgen.html
+++ b/speechgen.html
@@ -83,7 +83,9 @@
 							</div>
 						</section>
 						<a href="#" class="image featured">
-							<img src="SpeechGen-assets/images/overall.png" alt="" />
+							<dev style="text-align: center;">
+								<img src="SpeechGen-assets/images/overall.png" alt="" style="width: 70%; display:inline;"/>
+							</dev>
 						</a>
 						<header>
 							<h2> SpeechGen</h2>
@@ -119,7 +121,7 @@
 							<br>
 							<table>
 								<tr>
-									<th class="center"> Spansih </th>
+									<th class="center"> Spanish </th>
 									<th class="center"> English (Ground Truth)</th>
 									<th class="center"> SpeechGen </th>
 								</tr>
