updated the speech inpainting demo

--- a/speechgen.html
+++ b/speechgen.html
@@ -84,7 +84,8 @@
 						</section>
 						<a href="#" class="image featured">
 							<dev style="text-align: center;">
-								<img src="SpeechGen-assets/images/overall.png" alt="" style="width: 70%; display:inline;"/>
+								<img src="SpeechGen-assets/images/overall.png" alt=""
+									style="width: 70%; display:inline;" />
 							</dev>
 						</a>
 						<header>
@@ -219,7 +220,7 @@
 										</div>
 									</td>
 								</tr>
-								<!-- 4-->
+								<!-- 4 -->
 								<tr>
 									<td class="demo-audio">
 										<audio controls>
@@ -286,33 +287,46 @@
 							</table>
 							<br>
 							<br>
+
 							<h2> Speech Inpainting </h2>
 							<br>
 							<table>
 								<tr>
+									<th class="center"> Clean </th>
 									<th class="center"> Corrupted </th>
 									<th class="center"> SpeechGen </th>
 								</tr>
+
 								<!-- 1 -->
 								<tr>
 									<td class="demo-audio">
 										<audio controls>
-											<source src="SpeechGen-assets/audios/si/source/p244_022_16566_35207.wav">
-											type="audio/mpeg">
+											<source src="SpeechGen-assets/audios/si/clean/clean_0.flac"
+												type="audio/mpeg">
 											Your browser does not support the audio element.
 										</audio>
-										<div class="demo-transcript">The actual primary _____________________ to be
-											the effect of superimposition of a number of bows.
+										<div class="demo-transcript">
+											Would not the loftiest eminences of the city at least be visible?
 										</div>
 									</td>
 									<td class="demo-audio">
 										<audio controls>
-											<source src="SpeechGen-assets/audios/si/label/22_p244_022_16566_35207.wav"
+											<source src="SpeechGen-assets/audios/si/corrupted/corrupted_0.flac"
 												type="audio/mpeg">
 											Your browser does not support the audio element.
 										</audio>
-										<div class="demo-transcript">The actual primary rainbow observed is said to be
-											the effect of superimposition of a number of bows.
+										<div class="demo-transcript">
+											Would not the loftiest eminences of the city at lea__ ___ __le?
+										</div>
+									</td>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/predict/predict_0.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">
+											Would not the loftiest eminences of the city at least be visible?
 										</div>
 									</td>
 								</tr>
@@ -320,119 +334,70 @@
 								<tr>
 									<td class="demo-audio">
 										<audio controls>
-											<source src="SpeechGen-assets/audios/si/source/p244_107_14086_27682.wav"
+											<source src="SpeechGen-assets/audios/si/clean/clean_1.flac"
 												type="audio/mpeg">
 											Your browser does not support the audio element.
 										</audio>
-										<div class="demo-transcript">This time it will _____________________ field a
-											little
-											bit.
+										<div class="demo-transcript">And the whole night the tree stood still and in
+											deep thought.
 										</div>
 									</td>
 									<td class="demo-audio">
 										<audio controls>
-											<source src="SpeechGen-assets/audios/si/label/46_p244_107_14086_27682.wav"
+											<source src="SpeechGen-assets/audios/si/corrupted/corrupted_1.flac"
 												type="audio/mpeg">
 											Your browser does not support the audio element.
 										</audio>
-										<div class="demo-transcript">This time it will have opened up the field a little
-											bit.
+										<div class="demo-transcript">And the whole ___ the tree stood still and in
+											deep thought.
+										</div>
+									</td>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/predict/predict_1.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">And the whole night the tree stood still and in
+											deep thought.
 										</div>
 									</td>
 								</tr>
 								<!-- 3 -->
-								<!-- <tr>
-									<td class="demo-audio">
-										<audio controls>
-											<source src="SpeechGen-assets/audios/si/source/p259_004_1164_18445.wav"
-												type="audio/mpeg">
-											Your browser does not support the audio element.
-										</audio>
-										<div class="demo-transcript">We also need a small plastic snake and a big toy
-											frog for the kids.
-										</div>
-									</td>
-									<td class="demo-audio">
-										<audio controls>
-											<source src="SpeechGen-assets/audios/si/label/156_p259_004_1164_18445.wav"
-												type="audio/mpeg">
-											Your browser does not support the audio element.
-										</audio>
-										<div class="demo-transcript">We also need a small plastic snake and a big toy
-											frog for the kids.
-										</div>
-									</td>
-								</tr> -->
-								<!-- 4-->
-								<!-- <tr>
-									<td class="demo-audio">
-										<audio controls>
-											<source src="SpeechGen-assets/audios/si/source/p259_007_23883_43083.wav"
-												type="audio/mpeg">
-											Your browser does not support the audio element.
-										</audio>
-										<div class="demo-transcript">The rainbow is a division of white light into many
-											beautiful colors.
-										</div>
-									</td>
-									<td class="demo-audio">
-										<audio controls>
-											<source src="SpeechGen-assets/audios/si/label/162_p259_007_23883_43083.wav"
-												type="audio/mpeg">
-											Your browser does not support the audio element.
-										</audio>
-										<div class="demo-transcript">The rainbow is a division of white light into many
-											beautiful colors.
-										</div>
-									</td>
-								</tr> -->
-								<!-- 5 -->
-								<!-- <tr>
-									<td class="demo-audio">
-										<audio controls>
-											<source src="SpeechGen-assets/audios/si/source/p259_022_29280_46788.wav"
-												type="audio/mpeg">
-											Your browser does not support the audio element.
-										</audio>
-										<div class="demo-transcript">The actual primary rainbow observed is said to be
-											the effect of superimposition of a number of bows.
-										</div>
-									</td>
-									<td class="demo-audio">
-										<audio controls>
-											<source src="SpeechGen-assets/audios/si/label/190_p259_022_29280_46788.wav"
-												type="audio/mpeg">
-											Your browser does not support the audio element.
-										</audio>
-										<div class="demo-transcript">The actual primary rainbow observed is said to be
-											the effect of superimposition of a number of bows.
-										</div>
-									</td>
-								</tr> -->
-								<!-- 6 -->
 								<tr>
 									<td class="demo-audio">
 										<audio controls>
-											<source src="SpeechGen-assets/audios/si/source/p280_004_37416_52765.wav"
+											<source src="SpeechGen-assets/audios/si/clean/clean_2.flac"
 												type="audio/mpeg">
 											Your browser does not support the audio element.
 										</audio>
-										<div class="demo-transcript">We also need a small plastic snake ____________ toy
-											frog for the kids.
+										<div class="demo-transcript">If it only were not so dark here and so terribly
+											lonely.
 										</div>
 									</td>
 									<td class="demo-audio">
 										<audio controls>
-											<source src="SpeechGen-assets/audios/si/label/434_p280_004_37416_52765.wav"
+											<source src="SpeechGen-assets/audios/si/corrupted/corrupted_2.flac"
 												type="audio/mpeg">
 											Your browser does not support the audio element.
 										</audio>
-										<div class="demo-transcript">We also need a small plastic snake and a big toy
-											frog for the kids.
+										<div class="demo-transcript">If it only were not so dark here and so terribly
+											lone__.
+										</div>
+									</td>
+									<td class="demo-audio">
+										<audio controls>
+											<source src="SpeechGen-assets/audios/si/predict/predict_2.wav"
+												type="audio/mpeg">
+											Your browser does not support the audio element.
+										</audio>
+										<div class="demo-transcript">If it only were not so dark here and so terribly
+											lonely.
 										</div>
 									</td>
 								</tr>
 							</table>
+
 							<br>
 							<br>
 							<h2> Speech Continuation </h2>
